[package]
name = "blocks"
version = "0.1.0"
authors = ["leighpauls"]
edition = "2018"

[dependencies]
quicksilver = "0.3.15"
num-derive = "0.2.5"
num-traits = "0.2.8"
futures = "0.1.27"
getrandom = { version ="*", features = ["stdweb"] }
instant = { version ="*", features = ["stdweb"] }

[dev-dependencies]
double = "0.2.3"
hamcrest2 = "0.2.6"